create event $clientng
