# apps/_swagger/swagger.json
@@ -53,6 +53,17 @@
                     "201": {
                         "description": "Ok"
                     }
+                },
+                "requestBody": {
+                    "description": "New event",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Event"
+                            }
+                        }
+                    }
                 }
             }
         },
@@ -113,7 +124,8 @@
                 "type": "object",
                 "properties": {
                     "name": {
-                        "type": "string"
+                        "type": "string",
+                        "example": "An Interesting Event"
                     }
                 }
             }
