# apps/tserver/src/app/events/events.repo.ts
@@ -1,6 +1,7 @@
 
 import db from '../../db'
 import { ObjectId } from 'mongodb'
+import { IEvent } from './event.interface'
 
 export async function listEvents() {
     const events = await db()
@@ -18,6 +19,11 @@ export async function listEvents() {
         .toArray()
 
     return events
+}
+
+export async function createEvent( event: Omit<IEvent, 'id'> ) {
+    const result = await db().collection('events').insertOne( event )
+    return { id: result.insertedId.toString() }
 }
 
 export async function retrieveEvent( id: string ) {
