# apps/tserver/src/app/events/events.routes.ts
@@ -1,12 +1,19 @@
 
 import { Router } from 'express';
-import { getEvent, getEvents } from './events.controller';
+import { getEvent, getEvents, newEvent } from './events.controller';
+import { IEvent } from './event.interface'
 
 export const eventsRouter = Router()
 
 eventsRouter.get( '/events', async ( request, response ) => {
     const events = await getEvents()
     response.send(events)
+})
+
+eventsRouter.post( '/events', async ( request, response ) => {
+    const payload: Omit<IEvent, 'id'> = request.body
+    const result = await newEvent({payload})
+    response.send(result)
 })
 
 eventsRouter.get( '/events/:id', async ( request, response ) => {
